* (bug 9877) Fix Catalan translation of rev-deleted-text-view
* (bug 9123) Safer way when applying $wgLocalTZoffset
* (bug 9896) Documentation for $wgSquidServers and X-FORWARDED-FOR
* (bug 9417) Uploading new versions of images when using Postgres no longer 
  throws warnings.
* (bug 9908) Using tsearch2 with Postgres 8.1 no longer gives an error.
* (bug 1438) Fix for diff table layout on very wide lines for Gecko and
  Opera-based browsers (incomplete, does not fix KHTML or MSIE)


== MediaWiki API changes since 1.10 ==

For the current progress and discussion, see http://meta.wikimedia.org/wiki/API

* New properties: links, templates, images, langlinks, categories, external links
* Breaking Change: imagelinks renamed into imageusage (il->iu)
* Bug fix: incorrect generator behavior in some cases


== Maintenance script changes since 1.10 ==

* Add support for wgMaxTocLevel option in parserTests
* (bug 6823) dumpHTML: explicitly disable article view counter

== Languages updated since 1.10 ==

* Arabic (ar)
* German (de)
* Spanish (es)
* Farsi (fa)
* Finnish (fi)
* French (fr)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Kabyle (kab)
* Kazakh (kk)
* Kurdish (ku)
* Lithuanian (lt)
* Norwegian (no)
* Polish (pl)
* Russian (ru)
* Somali (so)
* Sundanese (su)
* Swedish (sv)
* Chinese (PRC) (zh-cn)
* Chinese (Taiwan) (zh-tw)
* Cantonese (zh-yue)

== Compatibility ==

MediaWiki 1.11 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.11 has several database changes since 1.10, and will not work without schema
updates.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure