@@ -1,0 +1,54 @@
+/*
+** Diff rendering
+*/
+table.diff, td.diff-otitle, td.diff-ntitle {
+	background-color: white;
+}
+td.diff-otitle,
+td.diff-ntitle {
+	text-align: center;
+}
+td.diff-marker {
+	text-align: right;
+}
+td.diff-addedline {
+	background: #cfc;
+	font-size: smaller;
+}
+td.diff-deletedline {
+	background: #ffa;
+	font-size: smaller;
+}
+td.diff-context {
+	background: #eee;
+	font-size: smaller;
+}
+.diffchange {
+	color: red;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+table.diff {
+	border: none;
+	width: 98%;
+	border-spacing: 4px;
+	
+	/* Fixed layout is required to ensure that cells containing long URLs
+	   don't widen in Safari, Internet Explorer, or iCab */
+	table-layout: fixed;
+}
+table.diff td {
+	padding: 0;
+}
+table.diff col.diff-marker {
+	width: 2%;
+}
+table.diff col.diff-content {
+	width: 48%;
+}
+table.diff td div {
+	/* Scrollbars will be added for very wide cells
+	   instead of text overflowing or widening */
+	overflow: auto;
+}
